--- a/resources/views/nav/nav.scss
+++ b/resources/views/nav/nav.scss
@@ -12,7 +12,7 @@
 
     &_nav {
         display:         flex;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap:       wrap;
     }
 
