--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10933,6 +10933,13 @@ a.text-dark:focus {
   }
 }
 
+body,
+body * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .mainPage {
   flex: 1;
   display: flex;
@@ -10946,7 +10953,7 @@ a.text-dark:focus {
 
 .mainPage_nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -10980,5 +10987,40 @@ a.text-dark:focus {
 
 .mainPage footer {
   display: flex;
+}
+
+.parks {
+  position: relative;
+}
+
+.parks table {
+  margin: 50px auto;
+  border-collapse: collapse;
+  border: 2px solid #000;
+}
+
+.parks table th,
+.parks table td {
+  padding: 5px 10px;
+  border: 2px solid #000;
+}
+
+.parks table th {
+  text-align: center;
+}
+
+.parks_modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.parks_modal .parkEdit {
+  background: #fff;
 }
 
