--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,12 @@ body, body * {
     box-sizing: border-box;
 }
 
+.svg-icon {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
 @import '../views/nav/nav';
 @import '../views/manager/manager';
 @import '../views/park_edit/park_edit';
