--- a/resources/views/manager/manager.scss
+++ b/resources/views/manager/manager.scss
@@ -9,7 +9,6 @@
     align-items: center;
     padding-top: 25px;
 
-
     table {
         margin:          25px auto 30px;
 
@@ -31,8 +30,7 @@
     }
 
     &_add {
-        width: 30px;
-        height: 30px;
+        margin-bottom: 40px;
     }
 }
 
