--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,4 @@ body, body * {
 @import '../views/nav/nav';
 @import '../views/manager/manager';
 @import '../views/park_edit/park_edit';
+@import '../views/truck_edit/truck_edit';
