--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11142,3 +11142,115 @@ body * {
   padding-left: 12px;
 }
 
+.truckEdit {
+  flex: 1;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 50px 100px;
+  margin: 0 auto;
+  color: #666;
+}
+
+.truckEdit_form {
+  background: #d8fffe;
+  padding: 40px 15px 20px;
+  border-radius: 5px;
+  box-shadow: 7px 7px 7px lightblue;
+}
+
+.truckEdit_header {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.truckEdit_item {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.truckEdit_item-title {
+  width: 150px;
+}
+
+.truckEdit_item-value {
+  width: 500px;
+  padding: 0 10px;
+}
+
+.truckEdit_trucksHeader {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: 700;
+  border-bottom: 3px solid #666;
+}
+
+.truckEdit .parksBlock {
+  display: flex;
+  justify-content: center;
+}
+
+.truckEdit .parksBlock_item,
+.truckEdit .parksBlock_title {
+  width: 280px;
+  margin: 5px;
+  padding: 5px;
+}
+
+.truckEdit .parksBlock_title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #000;
+}
+
+.truckEdit .parksBlock_item {
+  background: #fff;
+  border: 1px solid black;
+}
+
+.truckEdit .parksBlock_item input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background: #fff;
+}
+
+.truckEdit .parksBlock_delete {
+  margin: 5px;
+  padding: 5px;
+}
+
+.truckEdit .parksBlock_delete .svg-delete {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.truckEdit .parksBlock_add {
+  margin: 20px 0;
+  transform: translateX(-22px);
+}
+
+.truckEdit_buttons-item {
+  margin: 0 15px;
+  padding: 4px 10px;
+}
+
+.truckEdit_buttons-item a {
+  text-decoration: none;
+}
+
+.truckEdit .is-invalid {
+  border: 2px solid red;
+}
+
+.truckEdit .is-error {
+  color: red;
+  font-weight: bold;
+  font-size: 12px;
+  padding-left: 12px;
+}
+
