--- a/resources/views/nav/nav.scss
+++ b/resources/views/nav/nav.scss
@@ -29,7 +29,7 @@
         font-weight:   bold;
         color:         antiquewhite;
 
-        transition:    0.3s ease;
+        transition:    transform 0.4s ease, color 0.3s ease;
 
         &.mod_enter {
             background: #00c000;
