--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,11 @@ body, body * {
     width: 50px;
     height: 50px;
     cursor: pointer;
+
+    @media (max-width: 500px) {
+        width: 30px;
+        height: 30px;
+    }
 }
 
 @import '../views/nav/nav';
